--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <h1><a href="index.html">Meet Mali</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm an aspiring <span>Data Scientist</span> from Mumbai</h2>
+      <h2>I'm a passionate <span>Web Designer</span> from Illinois</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -956,5 +956,6 @@
   <script src="assets/js/main.js"></script>
 
  </body>
+
 
 </html>
