--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <img src="assets/img/me_about.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Web Designer | Software Engineer 🧑🏻‍💻 </h3> 
+          <h3>Web Designer | Frontend Engineer 🧑🏻‍💻 </h3> 
           <br>
           <p style="text-align: justify;">
             Hi there! 👋🏻 I'm Meet, a seasoned problem-solver fueled by curiosity and creativity. With a proven track record of tackling technical challenges and leading diverse teams, I thrive at the intersection of innovation, strategy, and collaboration, turning ideas into meaningful outcomes.
@@ -959,4 +959,5 @@
 
 
 </html>
+
 
